...
                            
                            self.presenter?.restartGame()
                            self.resetBorder()
                            }
                        )
            
        alertPresenter?.presentAlert(model: alertModel, accessibilityIdentifier: "My Alert")
    }
    
    func highlightImageBorder(isCorrectAnswer: Bool) {
        imageView.layer.masksToBounds = true
        imageView.layer.borderWidth = 8
        imageView.layer.borderColor = isCorrectAnswer ? UIColor.ypGreen.cgColor : UIColor.ypRed.cgColor
...
